--- a/cxfont.html
+++ b/cxfont.html
@@ -1540,7 +1540,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 <dd>
 <p>prints the entered string in dotmatrix font</p>
 <p>no checking as to terminalwidth is done so adjust terminal width and char sizes accordingly</p>
-<p>cursor will be positioned at top right of last character</p>
+<blockquote><p>will be positioned at top right of last character</p></blockquote>
 <pre class="listing"><span class="Comment"># example for dotMatrixTyper and bracketMatrixTyper</span>
 <span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">5</span><span class="Punctuation">)</span>
@@ -1556,7 +1556,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
 <dd>
 <p>prints the entered string in bracketmatrix font</p>
 <p>no checking as to terminalwidth is done so adjust terminal width and char sizes accordingly</p>
-<p>cursor will be positioned at top right of last character </p>
+<blockquote><p>will be positioned at top right of last character</p></blockquote>
 
 
 </dd>
@@ -1809,7 +1809,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-12-18 12:52:22 UTC</small>
+        <small>Made with Nim. Generated: 2018-12-26 07:31:08 UTC</small>
       </div>
     </div>
   </div>
