--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1537,7 +1537,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-12-02
+Latest      : 2018-12-26
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -2010,7 +2010,7 @@ note that not all unicode chars may be available on all systems</pre>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">centerPos</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>centerpos</p>
-<p>tries to move cursor so that string is centered when printing</p>
+<p>tries to move  so that string is centered when printing</p>
 <pre class="listing"><span class="Keyword">var</span> <span class="Identifier">s</span> <span class="Operator">=</span> <span class="StringLit">&quot;Hello I am centered&quot;</span>
 <span class="Identifier">centerPos</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span>
 <span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">,</span><span class="Identifier">gray</span><span class="Punctuation">)</span></pre>
@@ -2079,7 +2079,7 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">curFw</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">discardable</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>curFw</p>
-<p>mirrors terminal cursorForward</p>
+<p>mirrors terminal Forward</p>
 
 
 </dd>
@@ -2088,9 +2088,9 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>curMove</p>
-<p>conveniently move the cursor to where you need it</p>
+<p>conveniently move the  to where you need it</p>
 <p>relative of current postion , which you app need to track itself</p>
-<p>setting cursor off terminal will wrap output to next line </p>
+<p>setting  off terminal will wrap output to next line </p>
 
 
 </dd>
@@ -2382,7 +2382,7 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 <dt><pre><span class="Keyword">template</span> <span class="Identifier">curUp</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>curUp</p>
-<p>mirrors terminal cursorUp</p>
+<p>mirrors terminal Up</p>
 
 
 </dd>
@@ -2390,7 +2390,7 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 <dt><pre><span class="Keyword">template</span> <span class="Identifier">curDn</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>curDn</p>
-<p>mirrors terminal cursorDown</p>
+<p>mirrors terminal Down</p>
 
 
 </dd>
@@ -2398,7 +2398,7 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 <dt><pre><span class="Keyword">template</span> <span class="Identifier">curBk</span><span class="Other">(</span><span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>curBkn</p>
-<p>mirrors terminal cursorBackward</p>
+<p>mirrors terminal Backward</p>
 
 
 </dd>
@@ -2429,16 +2429,14 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 <a id="curOn.t,"></a>
 <dt><pre><span class="Keyword">template</span> <span class="Identifier">curOn</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>curOn</p>
-<p>cursor on , mirrors function showCursor from terminal.nim </p>
+curOn<blockquote><p>on , mirrors function showCursor from terminal.nim</p></blockquote>
 
 
 </dd>
 <a id="curOff.t,"></a>
 <dt><pre><span class="Keyword">template</span> <span class="Identifier">curOff</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>curOff</p>
-<p>cursor off , mirrors function hideCursor from terminal.nim </p>
+curOff<blockquote><p>off , mirrors function hideCursor from terminal.nim</p></blockquote>
 
 
 </dd>
@@ -2572,7 +2570,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-12-18 12:52:18 UTC</small>
+        <small>Made with Nim. Generated: 2018-12-26 07:31:05 UTC</small>
       </div>
     </div>
   </div>
