--- a/cxtime.html
+++ b/cxtime.html
@@ -1251,7 +1251,7 @@ function main() {
     title="cxTz = enum
   long, short"><wbr />cx<wbr />Tz<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#CxTimer"
-    title="CxTimer = object {.packed.}
+    title="CxTimer {.packed.} = object
   name*: string
   start*: float
   stop: float
@@ -1317,19 +1317,19 @@ function main() {
   <li><a class="reference" href="#printLnDateMsg%2Cstring%2Cint"
     title="printLnDateMsg(atext: string = getDateStr(); xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />Date<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#newCxtimer%2Cstring"
-    title="newCxtimer(aname: string = &quot;cxtimer&quot;): ref (CxTimer)"><wbr />new<wbr />Cxtimer<span class="attachedType" style="visibility:hidden">CxTimer</span></a></li>
+    title="newCxtimer(aname: string = &quot;cxtimer&quot;): ref (CxTimer)"><wbr />new<wbr />Cxtimer<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#resetTimer%2Cref."
-    title="resetTimer(co: ref (CxTimer))"><wbr />reset<wbr />Timer<span class="attachedType" style="visibility:hidden">CxTimer</span></a></li>
+    title="resetTimer(co: ref (CxTimer))"><wbr />reset<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#startTimer%2Cref."
-    title="startTimer(co: ref (CxTimer))"><wbr />start<wbr />Timer<span class="attachedType" style="visibility:hidden">CxTimer</span></a></li>
+    title="startTimer(co: ref (CxTimer))"><wbr />start<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#lapTimer%2Cref."
-    title="lapTimer(co: ref (CxTimer)): auto"><wbr />lap<wbr />Timer<span class="attachedType" style="visibility:hidden">CxTimer</span></a></li>
+    title="lapTimer(co: ref (CxTimer)): auto"><wbr />lap<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#stopTimer%2Cref."
-    title="stopTimer(co: ref (CxTimer))"><wbr />stop<wbr />Timer<span class="attachedType" style="visibility:hidden">CxTimer</span></a></li>
+    title="stopTimer(co: ref (CxTimer))"><wbr />stop<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#duration%2Cref."
-    title="duration(co: ref (CxTimer)): float"><wbr />duration<span class="attachedType" style="visibility:hidden">CxTimer</span></a></li>
+    title="duration(co: ref (CxTimer)): float"><wbr />duration<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#saveTimerResults%2Cref."
-    title="saveTimerResults(b: ref (CxTimer))"><wbr />save<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden">CxTimer</span></a></li>
+    title="saveTimerResults(b: ref (CxTimer))"><wbr />save<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#showTimerResults%2Cstring"
     title="showTimerResults(aname: string)"><wbr />show<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#showTimerResults%2C"
@@ -1380,7 +1380,7 @@ function main() {
 
 </dd>
 <a id="CxTimer"></a>
-<dt><pre><a href="cxtime.html#CxTimer"><span class="Identifier">CxTimer</span></a> <span class="Other">=</span> <span class="Keyword">object</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">packed</span></span><span class="Other">.}</span></span>
+<dt><pre><a href="cxtime.html#CxTimer"><span class="Identifier">CxTimer</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">packed</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">name</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>
   <span class="Identifier">start</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">float</span>
   <span class="Identifier">stop</span><span class="Other">:</span> <span class="Identifier">float</span>
@@ -1761,7 +1761,7 @@ Format yyyy
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-12-26 07:31:06 UTC</small>
+        <small>Made with Nim. Generated: 2019-01-09 02:57:00 UTC</small>
       </div>
     </div>
   </div>
