--- a/cxconsts.html
+++ b/cxconsts.html
@@ -1139,11 +1139,8 @@ dt pre > span.Identifier, dt pre > span.Operator {
   color: #155da4;
   font-weight: 700; }
 
-dt pre > span.Identifier ~ span.Identifier, dt pre > span.Operator ~ span.Identifier {
-  color: inherit;
-  font-weight: inherit; }
-
-dt pre > span.Operator ~ span.Identifier {
+dt pre > span.Keyword ~ span.Identifier, dt pre > span.Identifier ~ span.Identifier,
+dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Identifier {
   color: inherit;
   font-weight: inherit; }
 
@@ -2770,6 +2767,8 @@ function main() {
     title="tabbutton = &quot;&quot;"><wbr />tabbutton<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#enterbutton"
     title="enterbutton = &quot;&quot;"><wbr />enterbutton<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#rslash"
+    title="rslash = &quot;\\&quot;"><wbr />rslash<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#check"
     title="check = &quot;✓&quot;"><wbr />check<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#xmark"
@@ -7340,6 +7339,12 @@ reset colors
 
 
 </dd>
+<a id="rslash"></a>
+<dt><pre><span class="Identifier">rslash</span> <span class="Other">=</span> <span class="StringLit">&quot;\\&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
 <a id="check"></a>
 <dt><pre><span class="Identifier">check</span> <span class="Other">=</span> <span class="StringLit">&quot;✓&quot;</span></pre></dt>
 <dd>
@@ -9397,7 +9402,7 @@ __  #
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-01-27 07:21:10 UTC</small>
+        <small>Made with Nim. Generated: 2019-02-02 10:31:26 UTC</small>
       </div>
     </div>
   </div>
